--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ body {
   cursor: pointer;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--primary-brand-color);
@@ -92,8 +93,9 @@ body {
 
 .site-nav .link {
   font-weight: 500;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.5;
+  /* letter-spacing: 0.02em; */
   color: var(--dark-color);
 }
 
@@ -102,7 +104,9 @@ body {
 }
 
 .contacts-nav .link {
+  /* font-size: 16px; */
   line-height: 1.5;
+  /* letter-spacing: 0.02em; */
   color: var(--primary-text-color);
 }
 
@@ -122,6 +126,7 @@ body {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
+  letter-spacing: 0.02em;
   text-align: center;
 }
 
@@ -135,15 +140,18 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--dark-color);
+
   text-align: center;
   text-transform: capitalize;
-  color: var(--dark-color);
 }
 
 .section .subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--dark-color);
 }
 
